--- a/.github/workflows/release_game.yml
+++ b/.github/workflows/release_game.yml
@@ -1,65 +1,85 @@
-name: "Export & Release To itch.io"
+name: "Dispatch Export"
 on:
-  release:
-    types: [created, edited]
-  
+  workflow_dispatch:
+    inputs:
+      godot_version:
+        description: "Godot Version"
+        required: true
+        default: "3.3"
+      godot_version_windows:
+        description: "Godot Version (For Windows Export)"
+        required: true
+        default: "3.3.3"
+      export_platform:
+        description: "Export Platform - all|windows|linux|web|macos|android"
+        required: true
+        default: "all"
+      export_folder:
+        description: "Export Folder - Repository Path"
+        required: true
+        default: "."
+      export_name:
+        description: "Export Name"
+        required: true
+        default: "godot-game-template"
+      release_android:
+        description: "Android Release Build"
+        required: false
+        default: "false"
+      itch_io:
+        description: "Itch.io Build"
+        required: false
+        default: "true"
+
 env:
-  GODOT_VERSION: 3.3
-  EXPORT_NAME: godot-game-template
-  RELEASE_ANDROID: ${{ false }} #set to true if you want to enable automatic android release export
-  RELEASE_WEB: ${{ true }} #set to false if you want to disable automatic web export
-  GH_PAGES: ${{ false }} #set to true if you want to enable automatic github pages deployment
+  GODOT_VERSION: ${{ github.event.inputs.godot_version }}
+  GODOT_VERSION_WINDOWS: ${{ github.event.inputs.godot_version_windows }}
+  EXPORT_PLATFORM: ${{ github.event.inputs.export_platform }}
+  EXPORT_FOLDER: ${{ github.event.inputs.export_folder }}
+  EXPORT_NAME: ${{ github.event.inputs.export_name }}
+  RELEASE_ANDROID: ${{ github.event.inputs.release_android }}
+  ITCH_IO: ${{ github.event.inputs.itch_io }}
 
 jobs:
-
-  export-windows:
+  export_windows:
     name: Windows Export
     runs-on: ubuntu-latest
+    if: ${{ github.event.inputs.export_platform == 'windows' || github.event.inputs.export_platform == 'all' }}
     container:
-      image: barichello/godot-ci:3.3
+      image: barichello/godot-ci:3.3.3
     steps:
       - name: Checkout
         uses: actions/checkout@v1
       - name: Setup
         run: |
           mkdir -v -p ~/.local/share/godot/templates
-          mv /root/.local/share/godot/templates/${GODOT_VERSION}.stable ~/.local/share/godot/templates/${GODOT_VERSION}.stable
+          mv /root/.local/share/godot/templates/${GODOT_VERSION_WINDOWS}.stable ~/.local/share/godot/templates/${GODOT_VERSION_WINDOWS}.stable
       - name: Windows Build
         run: |
+          cd ${EXPORT_FOLDER}
           mkdir -v -p build/windows
           godot -v --export "Windows Desktop" ./build/windows/$EXPORT_NAME.exe
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
-          name: windows
-          path: build/windows
+          name: Windows
+          path: ${{ env.EXPORT_FOLDER }}/build/windows
       - name: Zip Folder
-        run: zip -r windows.zip build/windows
-      - name: Get release
-        id: get_release
-        uses: bruceadams/get-release@v1.2.3
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-      - name: Upload release binary
-        uses: softprops/action-gh-release@v1
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        with:
-          upload_url: ${{ steps.get_release.outputs.upload_url }}
-          files: windows.zip
-        
+        run: zip -r itch.zip ${{ env.EXPORT_FOLDER }}/build/windows
       - name: Deploy to itch.io
+        if: ${{ env.ITCH_IO == 'true' }}
         uses: josephbmanley/butler-publish-itchio-action@master
         env:
           BUTLER_CREDENTIALS: ${{ secrets.BUTLER_CREDENTIALS }}
           CHANNEL: windows
           ITCH_GAME: ${{ secrets.ITCH_GAME }}
           ITCH_USER: ${{ secrets.ITCH_USER }}
-          PACKAGE: windows.zip
+          PACKAGE: itch.zip
 
-  export-linux:
+  export_linux:
     name: Linux Export
     runs-on: ubuntu-latest
+    if: ${{ github.event.inputs.export_platform == 'linux' || github.event.inputs.export_platform == 'all' }}
     container:
       image: barichello/godot-ci:3.3
     steps:
@@ -71,39 +91,30 @@ jobs:
           mv /root/.local/share/godot/templates/${GODOT_VERSION}.stable ~/.local/share/godot/templates/${GODOT_VERSION}.stable
       - name: Linux Build
         run: |
+          cd ${EXPORT_FOLDER}
           mkdir -v -p build/linux
           godot -v --export "Linux/X11" ./build/linux/$EXPORT_NAME.x86_64
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
-          name: linux
-          path: build/linux
+          name: Linux
+          path: ${{ env.EXPORT_FOLDER }}/build/linux
       - name: Zip Folder
-        run: zip -r linux.zip build/linux
-      - name: Get release
-        id: get_release
-        uses: bruceadams/get-release@v1.2.3
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-      - name: Upload release binary
-        uses: softprops/action-gh-release@v1
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        with:
-          upload_url: ${{ steps.get_release.outputs.upload_url }}
-          files: linux.zip
+        run: zip -r itch.zip ${{ env.EXPORT_FOLDER }}/build/linux
       - name: Deploy to itch.io
+        if: ${{ env.ITCH_IO == 'true' }}
         uses: josephbmanley/butler-publish-itchio-action@master
         env:
           BUTLER_CREDENTIALS: ${{ secrets.BUTLER_CREDENTIALS }}
           CHANNEL: linux
           ITCH_GAME: ${{ secrets.ITCH_GAME }}
           ITCH_USER: ${{ secrets.ITCH_USER }}
-          PACKAGE: linux.zip
+          PACKAGE: itch.zip
 
-  export-web:
+  export_web:
     name: Web Export
     runs-on: ubuntu-latest
+    if: ${{ github.event.inputs.export_platform == 'web' || github.event.inputs.export_platform == 'all' }}
     container:
       image: barichello/godot-ci:3.3
     steps:
@@ -114,52 +125,41 @@ jobs:
           mkdir -v -p ~/.local/share/godot/templates
           mv /root/.local/share/godot/templates/${GODOT_VERSION}.stable ~/.local/share/godot/templates/${GODOT_VERSION}.stable
       - name: Web Build
-        if: ${{ env.RELEASE_WEB==true }}
         run: |
+          cd ${EXPORT_FOLDER}
           mkdir -v -p build/web
           godot -v --export "HTML5" ./build/web/index.html
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
-          name: web
-          path: build/web
+          name: Web
+          path: ${{ env.EXPORT_FOLDER }}/build/web
       # Installing rsync is needed in order to deploy to GitHub Pages. Without it, the build will fail.
       - name: Install rsync 📚
         run: |
           apt-get update && apt-get install -y rsync
       - name: Deploy to GitHub Pages 🚀
-        if: ${{ env.GH_PAGES==true }}
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: gh-pages # The branch the action should deploy to.
-          FOLDER: build/web # The folder the action should deploy.
+          FOLDER: ${{ env.EXPORT_FOLDER }}/build/web # The folder the action should deploy.
       - name: Zip Folder
-        run: zip -r web.zip build/web
-      - name: Get release
-        id: get_release
-        uses: bruceadams/get-release@v1.2.3
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-      - name: Upload release binary
-        uses: softprops/action-gh-release@v1
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        with:
-          upload_url: ${{ steps.get_release.outputs.upload_url }}
-          files: web.zip
+        run: zip -r itch.zip ${{ env.EXPORT_FOLDER }}/build/web
       - name: Deploy to itch.io
+        if: ${{ env.ITCH_IO == 'true' }}
         uses: josephbmanley/butler-publish-itchio-action@master
         env:
           BUTLER_CREDENTIALS: ${{ secrets.BUTLER_CREDENTIALS }}
           CHANNEL: HTML
           ITCH_GAME: ${{ secrets.ITCH_GAME }}
           ITCH_USER: ${{ secrets.ITCH_USER }}
-          PACKAGE: web.zip
+          PACKAGE: itch.zip
 
-  export-mac:
+  export_mac:
     name: Mac Export
     runs-on: ubuntu-latest
+    if: ${{ github.event.inputs.export_platform == 'macos' || github.event.inputs.export_platform == 'all' }}
     container:
       image: barichello/godot-ci:3.3
     steps:
@@ -171,45 +171,37 @@ jobs:
           mv /root/.local/share/godot/templates/${GODOT_VERSION}.stable ~/.local/share/godot/templates/${GODOT_VERSION}.stable
       - name: Mac Build
         run: |
+          cd ${EXPORT_FOLDER}
           mkdir -v -p build/mac
           godot -v --export "Mac OSX" ./build/mac/$EXPORT_NAME.zip
       - name: Upload Artifact
         uses: actions/upload-artifact@v1
         with:
-          name: mac
-          path: build/mac
+          name: Mac
+          path: ${{ env.EXPORT_FOLDER }}/build/mac
       - name: Zip Folder
-        run: zip -r mac.zip build/mac
-      - name: Get release
-        id: get_release
-        uses: bruceadams/get-release@v1.2.3
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-      - name: Upload release binary
-        uses: softprops/action-gh-release@v1
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        with:
-          upload_url: ${{ steps.get_release.outputs.upload_url }}
-          files: mac.zip
+        run: zip -r itch.zip ${{ env.EXPORT_FOLDER }}/build/mac
       - name: Deploy to itch.io
+        if: ${{ env.ITCH_IO == 'true' }}
         uses: josephbmanley/butler-publish-itchio-action@master
         env:
           BUTLER_CREDENTIALS: ${{ secrets.BUTLER_CREDENTIALS }}
           CHANNEL: mac
           ITCH_GAME: ${{ secrets.ITCH_GAME }}
           ITCH_USER: ${{ secrets.ITCH_USER }}
-          PACKAGE: mac.zip
+          PACKAGE: itch.zip
 
-  export-android:
+  export_android:
     name: Android Export
     runs-on: ubuntu-latest
+    if: ${{ github.event.inputs.export_platform == 'android' || github.event.inputs.export_platform == 'all' }}
     container:
       image: myood/godot-ci-android-export:godot-3.3
     steps:
       - name: Checkout
         uses: actions/checkout@v1
       - name: Setup
+        if: ${{ env.RELEASE_ANDROID == 'true' }}
         run: |
           mkdir -v -p ~/.local/share/godot/templates
           mv /root/.local/share/godot/templates/${GODOT_VERSION}.stable ~/.local/share/godot/templates/${GODOT_VERSION}.stable
@@ -219,10 +211,10 @@ jobs:
           echo 'export/android/android_sdk_path = "/root/android-sdk"' >> ~/.config/godot/editor_settings-3.tres
       - name: Android Debug Build
         run: |
+          cd ${EXPORT_FOLDER}
           mkdir -v -p build/android
           godot --verbose --export-debug "Android" ./build/android/$EXPORT_NAME.debug.apk
       - name: Android Release Build
-        if: ${{ env.RELEASE_ANDROID==true }}
         env:
           K8S_SECRET_RELEASE_KEYSTORE_BASE64: ${{ secrets.K8S_SECRET_RELEASE_KEYSTORE_BASE64 }}
           K8S_SECRET_RELEASE_KEYSTORE_USER: ${{ secrets.K8S_SECRET_RELEASE_KEYSTORE_USER  }}
@@ -232,30 +224,20 @@ jobs:
           sed 's@keystore/release[[:space:]]*=[[:space:]]*".*"@keystore/release = "/root/release.keystore"@g' -i export_presets.cfg
           sed 's@keystore/release_password[[:space:]]*=[[:space:]]*".*"@keystore/release_password="'$K8S_SECRET_RELEASE_KEYSTORE_PASSWORD'"@g' -i export_presets.cfg
           sed 's@keystore/release_user[[:space:]]*=[[:space:]]*".*"@keystore/release_user="'$K8S_SECRET_RELEASE_KEYSTORE_USER'"@g' -i export_presets.cfg
+          cd ${EXPORT_FOLDER}
           godot --verbose --export "Android" ./build/android/$EXPORT_NAME.release.apk
       - uses: actions/upload-artifact@v1
         with:
-          name: android
-          path: build/android
+          name: Android
+          path: ${{ env.EXPORT_FOLDER }}/build/android
       - name: Zip Folder
-        run: zip -r android.zip build/android
-      - name: Get release
-        id: get_release
-        uses: bruceadams/get-release@v1.2.3
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-      - name: Upload release binary
-        uses: softprops/action-gh-release@v1
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        with:
-          upload_url: ${{ steps.get_release.outputs.upload_url }}
-          files: android.zip
+        run: zip -r itch.zip ${{ env.EXPORT_FOLDER }}/build/android
       - name: Deploy to itch.io
+        if: ${{ env.ITCH_IO == 'true' }}
         uses: josephbmanley/butler-publish-itchio-action@master
         env:
           BUTLER_CREDENTIALS: ${{ secrets.BUTLER_CREDENTIALS }}
           CHANNEL: android
           ITCH_GAME: ${{ secrets.ITCH_GAME }}
           ITCH_USER: ${{ secrets.ITCH_USER }}
-          PACKAGE: android.zip
+          PACKAGE: itch.zip
