--- a/.github/workflows/auto_release.yml
+++ b/.github/workflows/auto_release.yml
@@ -1,50 +1,21 @@
-name: "Dispatch Export (Manual)"
+name: "Dispatch Export (Automatic)"
 on:
-  workflow_dispatch:
-    inputs:
-      godot_version:
-        description: "Godot Version"
-        required: true
-        default: "3.4"
-      godot_version_windows:
-        description: "Godot Version (For Windows Export)"
-        required: true
-        default: "3.4"
-      export_platform:
-        description: "Export Platform - all|windows|linux|web|macos|android"
-        required: true
-        default: "all"
-      export_folder:
-        description: "Export Folder - Repository Path"
-        required: true
-        default: "."
-      export_name:
-        description: "Export Name"
-        required: true
-        default: "godot-game-template"
-      release_android:
-        description: "Android Release Build"
-        required: false
-        default: "false"
-      itch_io:
-        description: "Itch.io Build"
-        required: false
-        default: "true"
+  [push]
 
 env:
-  GODOT_VERSION: ${{ github.event.inputs.godot_version }}
-  GODOT_VERSION_WINDOWS: ${{ github.event.inputs.godot_version_windows }}
-  EXPORT_PLATFORM: ${{ github.event.inputs.export_platform }}
-  EXPORT_FOLDER: ${{ github.event.inputs.export_folder }}
-  EXPORT_NAME: ${{ github.event.inputs.export_name }}
-  RELEASE_ANDROID: ${{ github.event.inputs.release_android }}
-  ITCH_IO: ${{ github.event.inputs.itch_io }}
+  GODOT_VERSION: "3.4"
+  GODOT_VERSION_WINDOWS: "3.4"
+  EXPORT_PLATFORM: 'all'
+  EXPORT_FOLDER: "."
+  EXPORT_NAME: ${{ github.event.repository.name }}
+  RELEASE_ANDROID: "false"
+  ITCH_IO: "true"
 
 jobs:
   export_windows:
     name: Windows Export
     runs-on: ubuntu-latest
-    if: ${{ github.event.inputs.export_platform == 'windows' || github.event.inputs.export_platform == 'all' }}
+    if: ${{ env.EXPORT_PLATFORM == 'windows' || env.EXPORT_PLATFORM == 'all' }} && contains(github.event.head_commit.message, '!itch-deploy') 
     container:
       image: barichello/godot-ci:3.4
     steps:
@@ -79,7 +50,7 @@ jobs:
   export_linux:
     name: Linux Export
     runs-on: ubuntu-latest
-    if: ${{ github.event.inputs.export_platform == 'linux' || github.event.inputs.export_platform == 'all' }}
+    if: ${{ env.EXPORT_PLATFORM == 'linux' || env.EXPORT_PLATFORM == 'all' }} && contains(github.event.head_commit.message, '!itch-deploy')
     container:
       image: barichello/godot-ci:3.4
     steps:
@@ -114,7 +85,7 @@ jobs:
   export_web:
     name: Web Export
     runs-on: ubuntu-latest
-    if: ${{ github.event.inputs.export_platform == 'web' || github.event.inputs.export_platform == 'all' }}
+    if: ${{ env.EXPORT_PLATFORM == 'web' || env.EXPORT_PLATFORM == 'all' }} && contains(github.event.head_commit.message, '!itch-deploy')
     container:
       image: barichello/godot-ci:3.4
     steps:
@@ -159,7 +130,7 @@ jobs:
   export_mac:
     name: Mac Export
     runs-on: ubuntu-latest
-    if: ${{ github.event.inputs.export_platform == 'macos' || github.event.inputs.export_platform == 'all' }}
+    if: ${{ env.EXPORT_PLATFORM == 'macos' || env.EXPORT_PLATFORM == 'all' }} && contains(github.event.head_commit.message, '!itch-deploy')
     container:
       image: barichello/godot-ci:3.4
     steps:
@@ -194,7 +165,7 @@ jobs:
   export_android:
     name: Android Export
     runs-on: ubuntu-latest
-    if: ${{ github.event.inputs.export_platform == 'android' || github.event.inputs.export_platform == 'all' }}
+    if: ${{ env.EXPORT_PLATFORM == 'android' || env.EXPORT_PLATFORM == 'all' }} && contains(github.event.head_commit.message, '!itch-deploy')
     container:
       image: myood/godot-ci-android-export:godot-3.4
     steps:
